--- a/style/main.css
+++ b/style/main.css
@@ -18,3 +18,12 @@
   height: 30px;
   width: 30px;
 }
+.upvote {
+  height: 20px;
+  width: 20px;
+}
+
+.downvote {
+  height: 20px;
+  width: 20px;
+}
