fixed some styling to different sites also fixed votecounter issue with the response

--- a/style/main.css
+++ b/style/main.css
@@ -31,3 +31,14 @@
 .cursorPointer {
   cursor: pointer;
 }
+
+ul {
+  list-style-type: none;
+}
+.anchor-color {
+  color: #81c1e9;
+}
+
+.anchor-color:hover {
+  color: #e2e2e2;
+}
