--- a/style/main.css
+++ b/style/main.css
@@ -62,14 +62,6 @@ a {
   color: #e2e2e2;
 }
 
-/* .vertical {
-  margin: 0px;
-  width: 1px;
-  height: 100%;
-  background-color: rgba(0,0,0,.1);
-  position: absolute;
-} */
-
 .voteFlex {
   height: 80px;
   display: flex;
@@ -98,4 +90,20 @@ a {
   border-radius: 10px;
   z-index: 10;
   display: none;
+}
+.submitConfirm {
+  height: 150px;
+  width: 250px;
+  background-color: rgba(52, 57, 62, 0.76);
+  border: 1px solid rgba(185, 53, 57, 0.85);
+  border-radius: 10px;
+  z-index: 10;
+  display: none;
+}
+
+span.carousel-control-next-icon {
+  background-image: url(../images/right-arrow.png);
+}
+span.carousel-control-prev-icon {
+  background-image: url(../images/left-arrow.png);
 }
